--- a/Frontend/fashion/src/Components/Resetpassword.css
+++ b/Frontend/fashion/src/Components/Resetpassword.css
@@ -2,7 +2,7 @@
 
 /* Container */
 .auth-container {
-  max-width: 450px;
+  max-width: 800px;
   margin: 60px auto;
   padding: 40px 30px;
   background-color: white;
@@ -10,12 +10,13 @@
   box-shadow: 0 6px 25px rgba(0, 0, 0, 0.1);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
+  height: 300px;
 }
 
 /* Heading */
 .auth-container h2 {
   margin-bottom: 25px;
-  font-size: 26px;
+  font-size: 30px;
   color: #222;
   font-weight: 600;
 }
@@ -27,7 +28,7 @@
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 6px;
-  font-size: 15px;
+  font-size: 19px;
   background-color: #f9f9f9;
 }
 
@@ -40,7 +41,7 @@
   border: none;
   border-radius: 6px;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 500;
 }
 
@@ -51,7 +52,7 @@
 /* Message */
 .auth-container p {
   margin-top: 18px;
-  font-size: 14px;
+  font-size: 18px;
   color: #444;
 }
 
@@ -63,7 +64,10 @@
   }
 }
 
-#reset{
+#reset {
   display: flex;
-  margin-left: 150px;
+  justify-content: center; /* centers horizontally */
+  margin:auto; /* remove manual shifting */
 }
+
+
