--- a/Frontend/fashion/src/Components/Signup.css
+++ b/Frontend/fashion/src/Components/Signup.css
@@ -14,7 +14,7 @@
   /* Background Image with Gradient Overlay */
   background:
 
-url("C:\Users\Anand\Desktop\snippet-website\Frontend\fashion\public\images\Signupbanner1.png") no-repeat center center;
+url("C:\Users\91984\Desktop\snippet-website\Frontend\fashion\public\images\Signupbanner1.png") no-repeat center center;
 background-size: 60% 90%;
   padding: 20px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
