--- a/Frontend/fashion/src/Components/CartDrawer.css
+++ b/Frontend/fashion/src/Components/CartDrawer.css
@@ -3,11 +3,12 @@
   top: 0;
   right: -100%;
   width: 480px;
-  height: 100vh;
+  margin-top: 100px; /* height of your fixed header */
+  height: calc(100vh - 80px);
   background: white;
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
   transition: right 0.3s ease;
-  z-index: 1000;
+  z-index: 1800;
   display: flex;
   flex-direction: column;
 }
@@ -173,7 +174,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+  z-index: 1999;
 }
 
 @media (max-width: 480px) {
