--- a/Frontend/fashion/src/Components/CheckoutPage.css
+++ b/Frontend/fashion/src/Components/CheckoutPage.css
@@ -1,9 +1,9 @@
 .checkout-wrapper {
   display: flex;
   gap: 30px;
-  max-width: 1700px;
+  max-width: 2500px;
   margin: auto;
-  padding: 20px;
+  padding: 95px;
 }
 
 /* LEFT SECTION - scrollable */
@@ -35,18 +35,20 @@
 }
 
 .checkout-item img {
-  width: 100px;
-  height: 120px;
+  width: 240px;
+  height: 240px;
   object-fit: cover;
   border-radius: 6px;
 }
 
 .checkout-item-details {
   flex: 1;
+   font-size: 22px;
 }
 
 .checkout-item-details h4 {
   margin: 0 0 5px;
+  font-size: 29px;
 }
 
 .checkout-item-details .price {
@@ -166,4 +168,21 @@
   min-width: 25px;
   text-align: center;
   font-weight: bold;
+}
+
+/* Delete Button */
+.delete-btn {
+  margin-top: 10px;
+  padding: 8px 14px;
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.delete-btn:hover {
+  background-color: #cc0000;
 }
